apps/base/headscale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: headscale
  template:
    metadata:
      labels:
        app: headscale
    spec:
      containers:
        - name: headscale
          image: artifactory.local.hejsan.xyz/docker/headscale/headscale:v0.29.4-debug@sha256:2380cdb4951e5d63747d5880aeecaf7aea7702f06ea72a6b9d8010b9386195b8
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/headscale
            - name: headscale-data-pvc
              mountPath: /var/lib/headscale
          command: ["headscale", "serve"]
          resources:
            limits:
              memory: 800Mi
              cpu: "1"
            requests:
              memory: 500Mi
              cpu: "0.1"
      volumes:
        - name: config
          configMap:
            defaultMode: 420
            name: headscale-config
        - name: headscale-data-pvc
          persistentVolumeClaim:
            claimName: headscale-data-pvc-headscale-0
