apps/base/headscale/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: headscale
spec:
  serviceName: headscale
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: headscale
  template:
    metadata:
      labels:
        app: headscale
    spec:
      containers:
        - name: headscale
          image: artifactory.local.hejsan.xyz/docker/headscale/headscale:v0.27.1-debug@sha256:41d26ff8873d53964976561c2df33dfab0af52530f4dec7030a058423411403f
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/headscale
            - name: headscale-data-pvc
              mountPath: /var/lib/headscale
          command: ["headscale", "serve"]
          resources:
            limits:
              memory: 800Mi
              cpu: "1"
            requests:
              memory: 500Mi
              cpu: "0.1"
      volumes:
        - name: config
          configMap:
            defaultMode: 420
            name: headscale-config
  volumeClaimTemplates:
    - metadata:
        name: headscale-data-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ${STORAGE_CLASS}
        resources:
          requests:
            storage: 20Gi
