apps/base/headscale/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: headscale
spec:
  selector:
    app: headscale
  ports:
    - name: http
      targetPort: 8080
      port: 8080
