apps/base/headscale/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headscale.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: headscale
          port: http
    - match: Host(`headscale.${DOMAIN_EXTERNAL}`)
      kind: Rule
      services:
        - name: headscale
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
